--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
+
 # server.port=8080
+
+# logging.level.org.springframework: DEBUG
+
+
+# H2 Database
+# spring.datasource.url=jdbc:h2:mem:blogdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.h2.console.enabled=false
+# spring.h2.console.path=/h2
