--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -12,3 +12,8 @@
 # spring.datasource.password=
 # spring.h2.console.enabled=false
 # spring.h2.console.path=/h2
+
+
+# # JSP 사용 환경: JavaCampus는 JSP 사용 안 함
+# spring.mvc.view.prefix=/WEB-INF/jsp/
+# spring.mvc.view.suffix=.jsp
