--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -13,6 +13,13 @@
 # spring.h2.console.enabled=false
 # spring.h2.console.path=/h2
 
+# Postgres
+# spring.datasource.url=jdbc:postgresql://localhost:xxxx/blob
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.hibernate.show-sql=true
 
 # # JSP 사용 환경: JavaCampus는 JSP 사용 안 함
 # spring.mvc.view.prefix=/WEB-INF/jsp/
