MySQL Connection String

--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -4,7 +4,6 @@
 
 # logging.level.org.springframework: DEBUG
 
-
 # H2 Database
 # spring.datasource.url=jdbc:h2:mem:blogdb
 # spring.datasource.driverClassName=org.h2.Driver
@@ -20,6 +19,14 @@
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.hibernate.show-sql=true
+
+# MySQL: https://spring.io/guides/gs/accessing-data-mysql
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/javacampus
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.show-sql=true
 
 # spring.datasource.initialization-mode=always
 # spring.datasource.initialize=true
