--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -28,6 +28,17 @@
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.jpa.show-sql=true
 
+# MSSQL 
+# spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.datasource.url=jdbc:sqlserver://localhost;databaseName=JavaCampus;integratedsecurity=true
+# spring.datasource.url=jdbc:sqlserver://localhost;databaseName=JavaCampus
+# spring.datasource.username=JavaCampus
+# spring.datasource.password=
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+# spring.jpa.hibernate.ddl-auto=update
+
 # spring.datasource.initialization-mode=always
 # spring.datasource.initialize=true
 # spring.datasource.schema=classpath:/schema.sql
