--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -4,15 +4,16 @@
 
 # logging.level.org.springframework: DEBUG
 
-# H2 Database
-# spring.datasource.url=jdbc:h2:mem:blogdb
+# # H2 Database
 # spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.url=jdbc:h2:mem:javacampus
 # spring.datasource.username=sa
 # spring.datasource.password=
-# spring.h2.console.enabled=false
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.h2.console.enabled=true
 # spring.h2.console.path=/h2
 
-# Postgres
+# # Postgres
 # spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 # spring.datasource.username=
 # spring.datasource.password=
@@ -20,7 +21,7 @@
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.hibernate.show-sql=true
 
-# MySQL: https://spring.io/guides/gs/accessing-data-mysql
+# # MySQL: https://spring.io/guides/gs/accessing-data-mysql
 # spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:mysql://localhost:3306/javacampus
 # spring.datasource.username=root
@@ -28,7 +29,7 @@
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.jpa.show-sql=true
 
-# MSSQL 
+# # MSSQL 
 # spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # spring.datasource.url=jdbc:sqlserver://localhost;databaseName=JavaCampus;integratedsecurity=true
 # spring.datasource.url=jdbc:sqlserver://localhost;databaseName=JavaCampus
