--- a/JavaCampus/pom.xml
+++ b/JavaCampus/pom.xml
@@ -50,6 +50,8 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- 데이터베이스 설정 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -59,6 +61,7 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
