Configure a Java app

--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -48,3 +48,10 @@
 # # JSP 사용 환경: JavaCampus는 JSP 사용 안 함
 # spring.mvc.view.prefix=/WEB-INF/jsp/
 # spring.mvc.view.suffix=.jsp
+
+
+# https://stackoverflow.com/questions/47580247/optional-environment-variables-in-spring-app
+
+
+
+foo=${FOO:#{null}}
