--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -19,6 +19,7 @@
 # spring.datasource.password=
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=none
+# spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.jpa.hibernate.show-sql=true
 
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
