--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
 
+
 # server.port=8080
 
-# logging.level.org.springframework: DEBUG
+
+# logging.level.org.springframework.web: DEBUG
+# logging.level.org.hibernate: ERROR
+
 
 # # H2 Database
 # spring.datasource.driverClassName=org.h2.Driver
@@ -13,6 +17,7 @@
 # spring.h2.console.enabled=true
 # spring.h2.console.path=/h2
 
+
 # # Postgres
 # spring.datasource.url=jdbc:postgresql://localhost:5432/blog
 # spring.datasource.username=
@@ -22,6 +27,7 @@
 # spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.jpa.hibernate.show-sql=true
 
+
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
 # spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:mysql://localhost:3306/javacampus
@@ -29,6 +35,7 @@
 # spring.datasource.password=
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # spring.jpa.show-sql=true
+
 
 # # MSSQL 
 # spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -41,18 +48,34 @@
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 # spring.jpa.hibernate.ddl-auto=update
 
+
 # spring.datasource.initialization-mode=always
 # spring.datasource.initialize=true
 # spring.datasource.schema=classpath:/schema.sql
 # spring.datasource.continue-on-error=true
+
 
 # # JSP 사용 환경: JavaCampus는 JSP 사용 안 함
 # spring.mvc.view.prefix=/WEB-INF/jsp/
 # spring.mvc.view.suffix=.jsp
 
 
+# # Thymeleaf 설정: (기본값)
+# spring.thymeleaf.template-loader-path:classpath:/templates
+# spring.thymeleaf.suffix:.html
+# spring.thymeleaf.cache:false
+
+
 # https://stackoverflow.com/questions/47580247/optional-environment-variables-in-spring-app
 
 
-
 foo=${CUSTOMCONNSTR_FOO:#{null}}
+
+
+# # 프로필 설정
+# spring.profiles.active=development
+# applications-{프로필이름}.properties
+# applications-development.properties
+# applications-production.properties
+# applications-staging.properties
+# applications-test.properties
