--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -8,14 +8,14 @@
 # logging.level.org.hibernate: ERROR
 
 
-# # H2 Database
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.url=jdbc:h2:mem:javacampus
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2
+# H2 Database
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:javacampus
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 
 # # Postgres
