--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -8,6 +8,9 @@
 # logging.level.org.hibernate: ERROR
 
 
+# JPA 공통 
+# spring.jpa.properties.hibernate.format_sql=true
+
 # H2 Database
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:javacampus
@@ -30,7 +33,7 @@ spring.h2.console.path=/h2
 
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
 # spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3306/javacampus
+# spring.datasource.url=jdbc:mysql://localhost:3306/javacampus?serverTimezone=UTC
 # spring.datasource.username=root
 # spring.datasource.password=
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
