--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -22,13 +22,13 @@ spring.h2.console.path=/h2
 
 
 # # Postgres
-# spring.datasource.url=jdbc:postgresql://localhost:5432/blog
+# spring.datasource.url=jdbc:postgresql://localhost:5432/javacampus
 # spring.datasource.username=
 # spring.datasource.password=
 # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=none
-# spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.jpa.hibernate.show-sql=true
+# # spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
