--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -10,6 +10,10 @@
 
 # JPA 공통 
 # spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.jdbc.datasource.ScriptUtils=debug
+## 데이터와 스키마가 준비되어있다면, 
+# spring.jpa.hibernate.ddl-auto=none 
+
 
 # H2 Database
 spring.datasource.driverClassName=org.h2.Driver
@@ -22,13 +26,14 @@ spring.h2.console.path=/h2
 
 
 # # Postgres
+# spring.jpa.database=postgresql
 # spring.datasource.url=jdbc:postgresql://localhost:5432/javacampus
 # spring.datasource.username=
 # spring.datasource.password=
-# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.hibernate.show-sql=true
-# # spring.datasource.driver-class-name=org.postgresql.Driver
+# # spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# # spring.jpa.hibernate.ddl-auto=none
+# # spring.jpa.hibernate.show-sql=true
+# # # spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
