--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -14,6 +14,9 @@ logging.level.org.springframework.jdbc.datasource.ScriptUtils=debug
 ## 데이터와 스키마가 준비되어있다면, 
 # spring.jpa.hibernate.ddl-auto=none 
 
+# @Column 애너테이션으로 지정한 형태로 컬럼명 생성: FIRST_NAME 대신 FIRSTNAME으로 컬럼명 생성
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # H2 Database
 spring.datasource.driverClassName=org.h2.Driver
