--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -10,8 +10,9 @@
 
 # JPA 공통 
 # spring.jpa.properties.hibernate.format_sql=true
+## 스키마와 데이터가 데이터베이스에 적용되는 과정을 콘솔에 표시
 logging.level.org.springframework.jdbc.datasource.ScriptUtils=debug
-## 데이터와 스키마가 준비되어있다면, 
+## 데이터와 스키마가 준비되어있다면, 모델 클래스를 바탕으로 테이블 생성할 필요없음
 # spring.jpa.hibernate.ddl-auto=none 
 
 # @Column 애너테이션으로 지정한 형태로 컬럼명 생성: FIRST_NAME 대신 FIRSTNAME으로 컬럼명 생성
