--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html
 
 
+spring.application.name=javacampus
+
+
 # server.port=8080
 
 
@@ -91,3 +94,11 @@ foo=${CUSTOMCONNSTR_FOO:#{null}}
 # applications-production.properties
 # applications-staging.properties
 # applications-test.properties
+
+
+
+
+
+spring.main.allow-circular-references=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
