--- a/JavaCampus/src/main/resources/application.properties
+++ b/JavaCampus/src/main/resources/application.properties
@@ -43,13 +43,17 @@ spring.h2.console.path=/h2
 # # # spring.datasource.driver-class-name=org.postgresql.Driver
 
 
+
 # # MySQL: https://spring.io/guides/gs/accessing-data-mysql
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://localhost:3306/javacampus?serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=
-# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update # 1 
+# spring.datasource.url=jdbc:mysql://localhost:3306/javacampus?serverTimezone=UTC # 2
+# # spring.datasource.url=jdbc:mysql://localhost/javacampus
+# spring.datasource.username=root # 3
+# spring.datasource.password= # 4
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver # 5
+# # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect # 6
+# spring.jpa.show-sql=true  # 7 
+
 
 
 # # MSSQL 
